--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
