--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
