--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -33,7 +34,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "vite": "^5.2.6"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "server.js",
