--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
