--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -4,10 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev:client": "vite",
-    "dev:server": "nodemon server.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -19,6 +16,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "lowdb": "^7.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
