--- a/PetStoreApp/package.json
+++ b/PetStoreApp/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev:client": "vite",
     "dev:server": "nodemon server.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -15,7 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
